--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@lekoarts/gatsby-theme-minimal-blog": "^6.2.1",
     "gatsby": "^5.12.12",
     "gatsby-plugin-feed": "^5.12.3",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-sitemap": "^6.12.3",
     "gatsby-plugin-webpack-statoscope": "^1.0.3",
